Remove scrollbar from right nav on Edge 18,17,16 / Windows 10. Resolves #423.

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -58,16 +58,19 @@
     left: 0;
     margin: 0;
     overflow-y: auto; /* Scroll - hide webkit scrollbar unless actively scrolling. */
-    -ms-overflow-style: -ms-autohiding-scrollbar; /* Hide scrollbar in IE unless actively scrolling. */
+    -ms-overflow-style: none; /* Hide scrollbar in IE, Edge. */
     padding: 16px 0;
     position: fixed;
+    scrollbar-width: none; /* Hide scrollbar in Firefox. */
     top: 60px;
     width: 100%;
     z-index: 10;
 }
 
+/* Scrollbar hidden - Safari and Chrome */
 .header ul::-webkit-scrollbar {
     display: none;
+    width: 0;
 }
 
 /* Navigation - hidden */
